# 48hfp-arena

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  data.csv  detect_stuffing.py
.claude/: settings.json
client/: Cargo.toml  Trunk.toml  index.html  style.css
client/src/: api.rs  lib.rs  state.rs  timeout.rs
client/src/components/: matrix.rs  mod.rs  nav.rs  overlays.rs  poster.rs  toast.rs
client/src/pages/: board.rs  mod.rs  more.rs  select.rs  swipe.rs
server/: Cargo.toml
server/src/: bt.rs  csv.rs  handlers.rs  main.rs  models.rs  persistence.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: bt.rs  csv.rs  handlers.rs  main.rs  models.rs  persistence.rs
static/: actions.js  app.js  index.html  render.js  store.js  style.css
