[package]
name = "filmrank-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
filmrank-shared = { path = "../shared" }
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CanvasRenderingContext2d",
    "EventSource",
    "MessageEvent",
    "Storage",
    "Location",
    "PointerEvent",
    "KeyboardEvent",
    "MouseEvent",
    "DomRect",
    "CssStyleDeclaration",
    "DomTokenList",
    "console",
    "Navigator",
    "Crypto",
    "HtmlImageElement",
    "VisibilityState",
    "EventTarget",
    "NodeList",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
futures = "0.3"
send_wrapper = "0.6"